[ABM]-Resolved the layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -14,11 +14,11 @@ body{
 }
 
 .content-area{
-  margin-left: 5%;
-  margin-right: 5%;
+  margin-left: 3%;
+  margin-right: 3%;
   font-size: 20px;
   /*font-family: "Open Sans script=all rev=1";*/
-  text-align: justify;
+  min-height: 330px;
 }
 
 md-nav-bar md-nav-ink-bar {
@@ -33,7 +33,7 @@ footer {
   background-color: #ccc;
   bottom: 0;
   width: 100% ;
-  height: 90px;
+  height: 85px;
   clear: both;
 }
 
@@ -41,8 +41,8 @@ footer div{
   padding-top: 40px;
 }
 
-.home-content{
-  /*background-image: url("../images/molecule-background.jpg");*/
+.justified-content{
+  text-align: justify;
 }
 
 .picture-credits{
@@ -51,4 +51,5 @@ footer div{
   bottom: 25px;
   text-align: center;
   color: gray;
+  width: 65%;
 }
